package edu.fiuba.algo3.modelo;

public class PuertoGenerico implements Puerto{
    @Override
    public int tasaPara(RecursoTipo recurso){
        return 3;
    }
}