@startuml
class Juego{
-rondas:int
-jugadores:list
-tablero:Tablero
-ladron:Ladron
+inicializarPartida()
+tirarDado()
+cosecharRecursos(numTerreno)
+verificarLadron)
+incrementarRonda()
+verificarGanador()
}

class Tablero{
-puertos:list
-terrenos:list
-piezas:list
-validarDistancia(piezaNueva)
+agregarPieza(pieza)
+cosecharTerreno(numTerreno): void
}


Interface Intercambio{
+intercambiar()
}

class Banco {
+intercambiarRecurso(recurso,cantidad)
}

class PuertoGenerico{
+intercambiar(jugador,oferta,recurso)
}

class PuertoEspecifico{
-recursoAceptado:String
+intercambiar(jugador,recursoSolicitado)
}

class Ladron{
-ubicacion
+robar()
+enDesierto():boolean
}

class Jugador{
-nombre:String
-caminos:list
-piezas:list
-recursos:list
-cartas:list
-Puertos:list<Puerto>
+Jugador(gestorDePiezas):void
+proponerIntercambio(oferta:list<Recurso>, recursoSolicitado:list<Recurso>)
+intercambiar(oferta:list<Recurso>, recursoSolicitado:list<Recurso>)
+incrementarRecurso(recurso,incremento)
+decrementarRecurso(recurso,decremento)
+calcularPuntajePiezas(): int
}

Abstract class Pieza {
-ubicacion: Ubicacion
-costoContruccion: list<String>
-propietario: Jugador
+agregarRecursos(recursos: list<String>)
+enPuerto(): Boolean
+validarColocacion(ubicacion: Ubicacion)
+colocar(ubicacion: Ubicacion)
+costoConstruccion()
}

class Camino{
+Validarcolocacion(ubicacion)
+costoConstruccion()
}

class Ciudad{
+validarColocacion(ubicacion)
+costoConstruccion()
}

class Asentamiento{
+validarColocacion(ubicacion)
+costoConstruccion()
}

class Recurso{
-tipo:string
-cantidad:int
+incrementar(cantidad):void
+decrementar(cantidad): void
+sosTipo(unTipo): bool
}

Abstract class Terreno {
-numero:int
-tieneLadron:boolean
-piezasAdyacentes:list
+esMiNumero(numero):bool
+repartirRecurso()
+bloquearConLadron()
+liberarDeLadron()
+agregarPiezaAdyacente()
+eliminarPiezaAdyacente()
}

class Bosque{
+repartirRecurso()
}

class Colina{
+repartirRecurso()
}

class Pastizal{
+repartirRecurso()
}

class Campo{
+repartirRecurso()
}

class Montaña{
+repartirRecurso()
}


Abstract class Carta{
-cantidad
+usar()
}

class Caballero{
+usar()
}

class PuntosDeVictoria{
+usar()
}

class Progreso{
+usar()
}


Carta <|-- Caballero
Carta <|-- PuntosDeVictoria
Carta <|-- Progreso
Juego o-- Tablero
Juego o-- Jugador
Juego --> Ladron
Intercambio <|.. Banco
Intercambio <|.. PuertoEspecifico
Intercambio <|.. PuertoGenerico
Juego --> Intercambio
Tablero o-- Terreno
Tablero --> Pieza
Terreno <|-- Bosque
Terreno <|-- Pastizal
Terreno <|-- Campo
Terreno <|-- Montaña
Terreno <|-- Colina
Terreno ..> Recurso
Jugador --> Pieza
Jugador --> Recurso
Jugador --> Carta
Pieza <|-- Camino
Pieza <|-- Asentamiento
Pieza <|-- Ciudad
@enduml
